# Anti-G

./: LICENSE  README.md
docs/: architecture.md  roadmap.md
repos/betting-optimizer/: README.md
repos/data-pipeline/: README.md  pyproject.toml  requirements.txt
repos/data-pipeline/src/data_pipeline/: __init__.py  models.py  pipeline.py
repos/data-pipeline/src/data_pipeline/ingestion/: __init__.py
repos/data-pipeline/src/data_pipeline/ingestion/adapters/: base.py  static.py
repos/data-pipeline/src/data_pipeline/processing/: __init__.py
repos/data-pipeline/src/data_pipeline/processing/transformations/: __init__.py  match.py
repos/data-pipeline/src/data_pipeline/processing/validations/: __init__.py  basic.py
repos/data-pipeline/src/data_pipeline/storage/: __init__.py  jsonl.py
repos/data-pipeline/src/scores_api/: config.py  main.py  models.py  service.py
repos/data-pipeline/src/scores_api/clients/: espn.py
repos/data-pipeline/src/scores_api/templates/: index.html
repos/data-pipeline/tests/: test_espn_client.py  test_pipeline.py  test_service.py
repos/data-pipeline/tests/data/: sample_matches.json
repos/feature-engineering/: README.md
repos/platform-infra/: README.md
repos/prediction-service/: README.md
